# riscv-newop

./: .gitignore  .travis.yml  BasicBlock.py  C32.py  I32.py  LICENSE  README.md  RV32.py  RVFormatParser.py  RVInstruction.py  RVInstructionSet.py  V32.py  inst.json  main.py  pyproject.toml  readHistogram.py  requirements-dev.txt  requirements.txt  spike_autogen.py  test_vec.py  tox.ini
coremark/: coremark.hst
embench_hst/: aha-mont64.hst  crc32.hst  cubic.hst  edn.hst  huffbench.hst  matmult-int.hst  minver.hst  nbody.hst  nettle-aes.hst  nettle-sha256.hst  nsichneu.hst  picojpeg.hst  qrduino.hst  sglib-combined.hst  slre.hst  st.hst  statemate.hst  ud.hst  wikisort.hst
examples/: figure1.ipynb  figure2.ipynb  figure3.ipynb  figure4.ipynb  figure5.ipynb  graph.py  graphing.ipynb  liveness_test.py  newop_test.py  score.py  spike_autogen.py  top_instruction.py  top_instructions.ipynb  unused_test.py  updated_score.py
examples/hst/: pc_hist2.hst  pc_hist3.hst
rvnewop/: BasicBlock.py  C32.py  Histogram.py  I32.py  M32.py  Program.py  RV32.py  RVFormatParser.py  RVInstruction.py  Subgraph.py  V32.py  __init__.py  analysis.py  main.py  newop.py  readHistogram.py  unused.py
rvnewop/.ipynb_checkpoints/: analysis-checkpoint.py
tests/: README.md  ima_sha3.dump  sample.dump  test_add.py  test_dump_files.py  test_vec.dump  test_vec_dump_file.py  test_with_dump_file.py
tests/dump_files/: C32_asm_test.dump  I32_asm_test.dump  ima_sha3.dump  imac_sha3.dump
